--- a/Client/Restaurant.Client/Restaurant.WinPhone/Restaurant.WinPhone.csproj
+++ b/Client/Restaurant.Client/Restaurant.WinPhone/Restaurant.WinPhone.csproj
@@ -177,6 +177,10 @@
       <HintPath>..\..\..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ModernHttpClient, Version=2.4.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\modernhttpclient.2.4.2\lib\Portable-Net45+WinRT45+WP8+WPA81\ModernHttpClient.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NControl, Version=0.2.5886.19900, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\NControl.0.8.6\lib\wp80\NControl.dll</HintPath>
       <Private>True</Private>
