--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -3,7 +3,10 @@
   <package id="akavache" version="4.1.2" targetFramework="monoandroid60" />
   <package id="akavache.core" version="4.1.2" targetFramework="monoandroid60" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="monoandroid60" />
+  <package id="Calcium" version="1.0.20" targetFramework="monoandroid60" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid60" />
   <package id="fusillade" version="0.6.0" targetFramework="monoandroid60" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="monoandroid60" />
   <package id="NControl" version="0.8.6" targetFramework="monoandroid60" />
   <package id="NControl.Controls" version="0.9.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="monoandroid60" />
