--- a/Client/Restaurant.Client/Restaurant.WinPhone/packages.config
+++ b/Client/Restaurant.Client/Restaurant.WinPhone/packages.config
@@ -3,6 +3,7 @@
   <package id="akavache" version="4.1.2" targetFramework="wp8" />
   <package id="akavache.core" version="4.1.2" targetFramework="wp8" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="wp8" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="wp8" />
   <package id="NControl" version="0.8.6" targetFramework="wp8" />
   <package id="NControl.Controls" version="0.9.0" targetFramework="wp8" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="wp8" />
