--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -3,6 +3,8 @@
   <package id="akavache" version="4.1.2" targetFramework="xamarinios10" />
   <package id="akavache.core" version="4.1.2" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="xamarinios10" />
+  <package id="Calcium" version="1.0.20" targetFramework="xamarinios10" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="xamarinios10" />
   <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
   <package id="fusillade" version="0.6.0" targetFramework="xamarinios10" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="xamarinios10" />
