--- a/Server/Restaurant.Server/Restaurant.Server.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.csproj
@@ -256,6 +256,7 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Pictures\noavatar.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
