--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -1,25 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="akavache.core" version="4.1.2" targetFramework="portable45-net45+win8+wp8" />
-  <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable45-net45+win8+wp8" />
-  <package id="fusillade" version="0.6.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable45-net45+win8+wp8" />
-  <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Punchclock" version="1.2.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="reactiveui" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="reactiveui-core" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="reactiveui-xamforms" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
-  <package id="refit" version="2.4.1" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wp8" />
-  <package id="SQLitePCL.raw_basic" version="0.8.6" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.4.1" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="portable45-net45+win8+wp8" />
+  <package id="akavache" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="akavache.core" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8" />
+  <package id="AutoMapper" version="6.0.2" targetFramework="portable45-net45+win8" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8" />
+  <package id="reactiveui" version="7.3.0" targetFramework="portable45-net45+win8" />
+  <package id="reactiveui-core" version="7.3.0" targetFramework="portable45-net45+win8" />
+  <package id="refit" version="2.4.1" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8" />
+  <package id="Splat" version="1.6.0" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Linq" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="System.Threading" version="4.3.0" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="portable45-net45+win8" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="portable45-net45+win8" />
 </packages>
