--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -5,6 +5,7 @@
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable45-net45+win8" />
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8" />
   <package id="AutoMapper" version="6.0.2" targetFramework="portable45-net45+win8" />
+  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8" />
