--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -15,7 +15,7 @@
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v7.0</TargetFrameworkVersion>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
     <JavaMaximumHeapSize>
@@ -161,19 +161,14 @@
   <ItemGroup>
     <Compile Include="AkavacheSqliteLinkerOverride.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Renderers\AppMasterDetailRenderer.cs" />
-    <Compile Include="Renderers\RestaurantEntryRenderer.cs" />
-    <Compile Include="Renderers\ThemedNavigationRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Resource.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
-    <AndroidResource Include="Resources\layout\toolbar.axml">
-      <SubType>AndroidResource</SubType>
-    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
@@ -197,8 +192,14 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_key_variant.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_email.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_key_variant.png" />
+    <AndroidResource Include="Resources\layout\Tabbar.axml" />
+    <AndroidResource Include="Resources\layout\toolbar.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\values\Colors.xml" />
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\values\Styles.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -269,7 +270,6 @@
     <AndroidResource Include="Resources\drawable-xhdpi\ic_basket_white.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\ic_basket_white.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_basket_white.png" />
-    <AndroidResource Include="Resources\layout\action_bar_notifitcation_icon.xml" />
     <AndroidResource Include="Resources\drawable\rounded_square.xml" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_menu_white.png" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_shopping_cart_white.png" />
@@ -299,6 +299,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
+    <Folder Include="Renderers\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
