--- a/Client/Tests/Restaurant.UnitTests/packages.config
+++ b/Client/Tests/Restaurant.UnitTests/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.5.2" targetFramework="net452" />
+  <package id="Autofac" version="4.6.0" targetFramework="net452" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net452" />
   <package id="Moq" version="4.7.10" targetFramework="net452" />
-  <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net452" />
-  <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="NUnit" version="3.6.1" targetFramework="net452" />
-  <package id="reactiveui" version="7.3.0" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
   <package id="reactiveui-core" version="7.3.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
