--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -90,9 +90,10 @@
     <Compile Include="Controls\RestaurantEntry.cs" />
     <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="ViewModels\ISignInViewModel.cs" />
-    <Compile Include="ViewModels\ISignUpViewModel.cs" />
-    <Compile Include="ViewModels\IWelcomeViewModel.cs" />
+    <Compile Include="Abstractions\ViewModels\ISignInViewModel.cs" />
+    <Compile Include="Abstractions\ViewModels\ISignUpViewModel.cs" />
+    <Compile Include="Abstractions\ViewModels\IWelcomeViewModel.cs" />
+    <Compile Include="ViewModels\IMainViewModel.cs" />
     <Compile Include="ViewModels\SignInViewModel.cs" />
     <Compile Include="ViewModels\FoodsViewModel.cs" />
     <Compile Include="ViewModels\Global.cs" />
