--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -5,10 +5,12 @@
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable45-net45+win8" />
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8" />
   <package id="AutoMapper" version="6.0.2" targetFramework="portable45-net45+win8" />
+  <package id="fusillade" version="0.7.0" targetFramework="portable45-net45+win8" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="portable45-net45+win8" />
+  <package id="Punchclock" version="1.1.1" targetFramework="portable45-net45+win8" />
   <package id="reactiveui" version="7.3.0" targetFramework="portable45-net45+win8" />
   <package id="reactiveui-core" version="7.3.0" targetFramework="portable45-net45+win8" />
   <package id="refit" version="2.4.1" targetFramework="portable45-net45+win8" />
@@ -17,7 +19,7 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8" />
-  <package id="Splat" version="1.6.0" targetFramework="portable45-net45+win8" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="portable45-net45+win8" />
   <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="portable45-net45+win8" />
   <package id="System.Collections" version="4.3.0" targetFramework="portable45-net45+win8" />
