--- a/Client/Restaurant.Client/Restaurant/Restaurant.csproj
+++ b/Client/Restaurant.Client/Restaurant/Restaurant.csproj
@@ -47,6 +47,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\FlatButton.cs" />
     <Compile Include="Facades\AutoMapperFacade.cs" />
     <Compile Include="Facades\NavigationFacade.cs" />
     <Compile Include="Managers\AuthentiticationManager.cs" />
@@ -257,6 +258,9 @@
     </Reference>
     <Reference Include="Xamarin.Forms.Xaml, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Xamarin.Forms.2.3.4.231\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.Xaml.dll</HintPath>
+    </Reference>
+    <Reference Include="XFGloss, Version=1.0.6.59, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Ansuria.XFGloss.1.0.6.59\lib\portable-net45+wp8+win8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\XFGloss.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
