--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -3,6 +3,7 @@
   <package id="akavache" version="5.0.0" targetFramework="portable45-net45+win8" />
   <package id="akavache.core" version="5.0.0" targetFramework="portable45-net45+win8" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="portable45-net45+win8" />
+  <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="portable45-net45+win8" />
   <package id="Autofac" version="3.5.2" targetFramework="portable45-net45+win8" />
   <package id="AutoMapper" version="6.0.2" targetFramework="portable45-net45+win8" />
   <package id="fusillade" version="0.7.0" targetFramework="portable45-net45+win8" />
