--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -3,6 +3,7 @@
   <package id="akavache" version="5.0.0" targetFramework="monoandroid51" />
   <package id="akavache.core" version="5.0.0" targetFramework="monoandroid51" />
   <package id="akavache.sqlite3" version="5.0.0" targetFramework="monoandroid51" />
+  <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid51" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid51" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid51" />
