--- a/Common/Restaurant.DataTransferObjects/Restaurant.DataTransferObjects.csproj
+++ b/Common/Restaurant.DataTransferObjects/Restaurant.DataTransferObjects.csproj
@@ -37,6 +37,7 @@
     <Compile Include="LoginDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterDto.cs" />
+    <Compile Include="UserInfoDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
