--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -303,6 +303,30 @@
     <AndroidResource Include="Resources\drawable-hdpi\ic_restaurant_menu_black.png" />
     <AndroidResource Include="Resources\drawable\back_menu.jpg" />
     <AndroidResource Include="Resources\drawable\ViewCellBackground.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\heart_empty.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\heart_filled.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\basket.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\shopping_basket.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\shopping_basket.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\shopping_basket.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\shopping_basket.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\shopping_basket.png" />
+    <AndroidResource Include="Resources\drawable-ldpi\shopping_basket.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Restaurant\Restaurant.csproj">
