--- a/Server/Restaurant.Server/appsettings.json
+++ b/Server/Restaurant.Server/appsettings.json
@@ -7,5 +7,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+
+  "AppSettings": {
+    "AdminUserName": "admin",
+    "AdminEmail": "admin@inbox.com",
+    "AdminPassword": "Test@123"
   }
 }
