creating angular services

--- a/Server/Restaurant.Server/appsettings.json
+++ b/Server/Restaurant.Server/appsettings.json
@@ -12,6 +12,7 @@
   "AppSettings": {
     "AdminUserName": "admin",
     "AdminEmail": "admin@inbox.com",
-    "AdminPassword": "Test@123"
+    "AdminPassword": "Test@123",
+    "ApiUrl": ""
   }
 }
