--- a/Web-Client/restaurant-manager/package.json
+++ b/Web-Client/restaurant-manager/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "ng2-color-picker": "^1.3.2",
     "rxjs": "^5.1.0",
     "semantic-ui": "^2.2.11",
     "zone.js": "^0.8.4"
