--- a/Server/Restaurant.Server/appsettings.json
+++ b/Server/Restaurant.Server/appsettings.json
@@ -9,10 +9,14 @@
     }
   },
 
-  "AppSettings": {
+  "UserSettings": {
     "AdminUserName": "admin",
     "AdminEmail": "admin@inbox.com",
     "AdminPassword": "Test@123",
-    "ApiUrl": ""
+    "ApiUrl": "",
+    "DefaultRoles": [
+      "Admin",
+      "Member"
+    ] 
   }
 }
