server dotnet cli command line feauture
Former-commit-id: b2a49ee42e6cb8b95407ebf75c7189a76cb48788

--- a/Server/Restaurant.Server/Restaurant.Server.Api.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.Api.csproj
@@ -49,4 +49,8 @@
     <ProjectReference Include="..\..\Common\Restaurant.DataTransferObjects\Restaurant.DataTransferObjects.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
