--- a/Server/Restaurant.Server/Restaurant.Server.Api.csproj
+++ b/Server/Restaurant.Server/Restaurant.Server.Api.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Restaurant.DataTransferObjects\Restaurant.DataTransferObjects.csproj" />
+    <ProjectReference Include="..\..\Common\Restaurant.Common\Restaurant.Common.csproj" />
   </ItemGroup>
 
 </Project>
