--- a/Server/Restaurant.Server/appsettings.Development.json
+++ b/Server/Restaurant.Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=RestaurantDatabase;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -6,5 +9,16 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "UserSettings": {
+    "AdminUserName": "admin",
+    "AdminEmail": "admin@inbox.com",
+    "AdminPassword": "Test@123",
+    "ApiUrl": "",
+    "DefaultRoles": [
+      "Admin",
+      "Member"
+    ]
   }
 }
